Implement paper and paper revisions upload
